# springboot-microservice

./: .gitignore  BUILD.bazel  Dockerfile.gradle  Dockerfile.maven  Makefile  README.md  WORKSPACE  build.gradle  copy_template.sh  pom.xml
config/deploy/base/: deployment.yml  kustomization.yml  service.yml
config/deploy/envs/aws/infrastructure-green/dl-aws-devops-dev-defaults/default/: ingress.yml  kustomization.yml
config/deploy/overlays/minikube/: deployment.yml  kustomization.yml
k8s/: deployment.yaml  service.yaml
k8s/basic/: deployment.yaml
k8s/configmap/: configmap.yaml  deployment.yaml
k8s/environment-variable/: deployment.yaml  secret.yaml
k8s/health-checks/: deployment.yaml  service.yaml
k8s/hpa/: deployment.yaml  hpa.yaml  metrics-server.yaml
k8s/jvm/: configmap.yaml  deployment.yaml
k8s/pvc/: deployment.yaml
k8s/recreate-strategy/: deployment.yaml
k8s/rolling-update-strategy/: deployment.yaml
k8s/secrets/: configmap.yaml  deployment.yaml  secret.yaml
k8s/secure/: deployment.yaml
k8s/statefulset/: pvc.yaml  service.yaml  statefulset.yaml
monitoring/: docker-compose.yml
src/main/java/com/demo/springbootmicroservice/: SpringbootMicroserviceApplication.java
src/main/resources/: application.properties
src/test/java/com/demo/springbootmicroservice/: SpringbootMicroserviceApplicationTests.java
